Subiendo cambios - hay fondo

--- a/src/Estilos/Estilos.css
+++ b/src/Estilos/Estilos.css
@@ -1,3 +1,4 @@
 body{
-    background-color: gold;
+    /* background-color: gold; */
+    background-image: url("../Imagenes/Fondo-Feriados3.png");
 }
